framec/tests/snapshots/swift_snapshots__async_attribute.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"14_async_attribute\", \"swift\")"
---
import Foundation

class AsyncFetcherFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class AsyncFetcherFrameContext {
    var _event: AsyncFetcherFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: AsyncFetcherFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class AsyncFetcherCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: AsyncFetcherFrameEvent?
    var parent_compartment: AsyncFetcherCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> AsyncFetcherCompartment {
        let c = AsyncFetcherCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class AsyncFetcher {
    private var machine: _AsyncFetcherMachine
    private var busy: Bool = false
    private var in_flight: String? = nil

    public enum FrameE703Error: Error {
        case busy(method: String, inFlight: String)
    }
    init() {
        self.machine = _AsyncFetcherMachine()
        self.busy = false
        self.in_flight = nil
    }

    func __frame_init() {
    }

    static func __create() -> AsyncFetcher {
        let c = AsyncFetcher()
        c.__frame_init()
        return c
    }

    public func fetch(_ key: String) async throws -> String {
        if self.busy {
            throw FrameE703Error.busy(method: "fetch", inFlight: self.in_flight ?? "?")
        }
        self.busy = true
        self.in_flight = "fetch"
        defer {
            self.in_flight = nil
            self.busy = false
        }
        return await self.machine.fetch(key)
    }

    public func initAsync() async {
        await self.machine.initAsync()
    }
}


class _AsyncFetcherMachine {
    private var _state_stack: [AsyncFetcherCompartment] = []
    private var __compartment: AsyncFetcherCompartment
    private var __next_compartment: AsyncFetcherCompartment? = nil
    private var _context_stack: [AsyncFetcherFrameContext] = []
    public var cache: Cache = nil

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = _AsyncFetcherMachine.__prepareEnter("Ready", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
    }

    static func __create() -> _AsyncFetcherMachine {
        let c = _AsyncFetcherMachine()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "Ready": ["Ready"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> AsyncFetcherCompartment {
        var comp: AsyncFetcherCompartment? = nil
        for name in _AsyncFetcherMachine.hsm_chain()[leaf]! {
            let new_comp = AsyncFetcherCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: AsyncFetcherCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: AsyncFetcherFrameEvent) async {
        // Route event to current state.
        await __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: AsyncFetcherCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = AsyncFetcherFrameEvent(message: "<$", parameters: __compartment.exit_args)
            await __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: AsyncFetcherFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = AsyncFetcherFrameEvent(message: "$>", parameters: __compartment.enter_args)
                await __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                await __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = AsyncFetcherFrameEvent(message: "$>", parameters: __compartment.enter_args)
                await __router(enter_event)
                await __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: AsyncFetcherFrameEvent) async {
        if __compartment.state == "Ready" {
            await _state_Ready(__e, __compartment)
        }
    }

    private func __transition(_ next: AsyncFetcherCompartment) {
        __next_compartment = next
    }

    public func fetch(_ key: String) async -> String {
        let __e = AsyncFetcherFrameEvent(message: "fetch", parameters: [key])
        let __ctx = AsyncFetcherFrameContext(event: __e, defaultReturn: "")
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        await __kernel(_context_stack[_context_stack.count - 1]._event)
        let __result = _context_stack[_context_stack.count - 1]._return as! String
        return __result
    }

    private func _state_Ready(_ __e: AsyncFetcherFrameEvent, _ compartment: AsyncFetcherCompartment) async {
        if __e._message == "fetch" {
            await self._s_Ready_hdl_user_fetch(__e, compartment)
            return
        }
    }

    private func _s_Ready_hdl_user_fetch(_ __e: AsyncFetcherFrameEvent, _ compartment: AsyncFetcherCompartment) async {
        let key = __e._parameters[0] as! String
        _context_stack[_context_stack.count - 1]._return = self.cache.get(key)
    }

    public func initAsync() async {
        let __e = AsyncFetcherFrameEvent(message: "$>", parameters: [])
        let __ctx = AsyncFetcherFrameContext(event: __e)
        _context_stack.append(__ctx)
        await __kernel(__e)
        _context_stack.removeLast()
    }
}
